--- a/算法/leetcode/28.实现str-str.md
+++ b/算法/leetcode/28.实现str-str.md
@@ -20,7 +20,7 @@
 kmp算法：
 1. 首先获取needle的部分匹配表（int[needle.length()]）：即字符串每个字串的所有前缀和所有后缀的公共字串的最大长度，例如：ABCDABD字符串，第一个字串为A,前缀子串即为除去最后一个字符，以第一个字符为首的子串。后缀子串为除去第一个字符，以最后一个字符结尾的子串。A除去最后一个字符A，前缀子串为空，同理后缀子串为空，所以部分匹配值为0。子串ABCDAB的所有前缀子串:A、AB、ABC、ABCD、ABCDA，所有后缀子串：B、AB、DAB、CDAB、BCDAB,公共子串AB的长度为2，所以部分匹配值为2。
 2. 对haystack遍历，如果字符和needle第一个字符相同，则继续向后匹配。如果不相同则判断是否和needle第一个字符对比，，如果是则haystack的索引向后移动，不是则haystack索引移动到i-=arr[j-1]的位置，最后j等于needle的长度，返回i-j
-**缺陷**： 如果needle字符串很长，计算它的部分匹配表是个非常耗时的工作。对于"aaa...aaaa"和"aaa...aaab"长度都为30000的匹配力不从心
+**缺陷：** 如果needle字符串很长，计算它的部分匹配表是个非常耗时的工作。对于"aaa...aaaa"和"aaa...aaab"长度都为30000的匹配力不从心
 ## 解法
 ```java
 /*
