--- a/算法/leetcode/53.最大子序和.md
+++ b/算法/leetcode/53.最大子序和.md
@@ -31,6 +31,7 @@
  */
 ```
 ## 解法1
+时间复杂度:O(n2)
 ```java
 class Solution {
     public int maxSubArray(int[] nums) {
@@ -51,4 +52,66 @@ class Solution {
         return max;
     }
 }
+```
+## 解法2
+分治法 时间复杂度:O(nlogn)
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        return maximum(nums,0,nums.length-1);
+    }
+    public int maximum(int[] nums, int l, int r){
+        //说明只有一个元素
+        if(l == r) return nums[l];
+
+        int m = (l+r)/2;
+        //最大连续子序列和完全在左半部分，递归左半部分，获取最大值
+        int lm = maximum(nums, l, m);
+        //最大连续子序列和完全在右半部分，递归右半部分，获取最大值
+        int rm = maximum(nums, m+1, r);
+
+        //最大连续子序列和横跨左右部分
+        //最大和
+        int sum = 0;
+        //左部分最大值
+        int ls = nums[m], li = 0;
+        for(int i = m; i >= l; i--){
+            li+= nums[i];
+            if(li > ls) ls = li;
+        }
+        //右部分最大值
+        int rs= nums[m+1], ri=0;
+        for (int i = m+1; i <= r; i++) {
+            ri+=nums[i];
+            if(ri>rs) rs = ri;
+        }
+        sum = ls + rs;
+        sum = Math.max(Math.max(lm, rm), sum);
+        return sum;
+
+    }
+}
+```
+## 解法3
+动态规划
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int len = nums.length;
+        int sum , max;
+        max = sum = nums[0];
+        for (int i = 1; i < len; i++) {
+            if(sum < 0){
+                //如果前面最大连续子序列和小于0，则以当前位置i结尾的最大连续子序列和为nums[i]
+                sum = nums[i];
+            }else{
+                //如果前面最大连续子序列和大于0，则以当前位置i结尾的最大连续子序列和为sum+nums[i]
+                sum+=nums[i];
+            }
+            if(sum> max) max = sum;
+        }
+        return max;
+    }
+}
+
 ```
