--- a/redis/基本命令.md
+++ b/redis/基本命令.md
@@ -81,4 +81,20 @@ spop key //随机从集合中弹出一个元素
 > 1. list是通过链表实现，访问两端元素速度极快，元素增多时访问中间元素速度较慢，比较适合新鲜事和日志这种很少访问中间元素的场景
 > 2. zset使用散列表和跳跃表(skip list)实现，即使读取中间元素速度也很快，时间复杂度o(log(N))
 > 3. list不能随便调整元素的位置，zset可以通过改变元素分数调整位置
-> 
+> 4. zset比list更耗费内存
+```
+zadd key score1 member1 score2 member2 ... //添加元素
+zscore key member //获取元素分数
+zrange key start stop [withscores] //按照分数由小到大返回，分数相同按照 字典顺序排列。时间复杂度o(log(n+m)) n为有序集合的基数，m为返回元素的个数
+zrangebyscore key min max [withscores] [limit offset count] //如果不希望分数范围包括端点值可以在分数前加上( 例如：zrangebyscore scoreboard (80 100; -inf和+inf表示负无穷和正无穷
+zrevrangebyscore key max min [withscores] [limit offset count] //与上面命令相反
+zincrby key increment member //增加元素分数
+zcard key //获取元素数量
+zcount key min max //获取分数范围内元素数量
+zrem key member1 member2 ... //删除元素
+zremrangebyrank key start stop //按照索引范围删除元素
+zremrangebyscore key min max //按照分数范围删除元素
+zrank key member //zrank会按照元素分数从小到大的顺序获得指定元素的排名
+zrevrank key member //与上一条命令相反
+zinterstore destination numkeys key [key...] [WEIGHTS weight [weight...]] [AGGREGATE SUM|MIN|MAX] //计算有序集合的交集并将结果存储到destination 
+
